--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,8 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# Dependency directory
+node_modules
 
-# dependencies
-/node_modules
+# Source maps
+*.js.map
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Files marked with gitigx
+*gitigx*
