--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-interactive": "^0.6.5",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "style-loader": "^0.18.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
